copyright info for moment-cell extension files

--- a/src/extensions/moment-cell/backgrid-moment-cell.css
+++ b/src/extensions/moment-cell/backgrid-moment-cell.css
@@ -1,3 +1,10 @@
+/*
+  backgrid-moment-cell
+  http://github.com/wyuenho/backgrid
+
+  Copyright (c) 2012 Jimmy Yuen Ho Wong
+  Licensed under the MIT @license.
+*/
 .backgrid .moment-cell {
   text-align: right;
 }
